force-app/main/default/objects/Woocom_Variant_Option__c/Woocom_Variant_Option__c.object-meta.xml
<CustomObject>
    <label>Woocom Variant Option</label>
    <nameField>
        <displayFormat>WVO-{0000}</displayFormat>
        <label>Woocom Variant Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Woocom Variant Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>