force-app/main/default/objects/Woocom_Variant_Option__c/fields/Field_Option__c.field-meta.xml
<CustomField>
    <fullName>Field_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Option</label>
    <type>Checkbox</type>
</CustomField>