force-app/main/default/objects/Woocom_Variant_Option__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>