force-app/main/default/objects/Woocom_Variant_Option__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Part</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Selected part must be part variant.</errorMessage>
        <filterItems>
            <field>Part__c.Part__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Part__c</referenceTo>
    <relationshipLabel>Woocom Variant Options</relationshipLabel>
    <relationshipName>Woocom_Variant_Options</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>