force-app/main/default/objects/Woocom_Variant_Option__c/fields/Woocommerce_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Woocommerce_Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Woocommerce Attribute</label>
    <referenceTo>Woocommerce_Attribute__c</referenceTo>
    <relationshipLabel>Woocom Variant Options</relationshipLabel>
    <relationshipName>Woocom_Variant_Options</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>